static/style.css
output {
  -ms-overflow-style: none;
  scrollbar-width: none;
  width: 100%;
  height: 150px;
  display: flex;
  justify-content: flex-start;
  flex-wrap: wrap;
  gap: 15px;
  position: relative;
  border-radius: 5px;
  overflow-y: scroll;
}
output::-webkit-scrollbar {
  display: none; /*for Chrome, Safari, and Opera */
}

output .image {
  height: 55px;
  border-radius: 5px;
  box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
  overflow: hidden;
  position: relative;
}

output .image img {
  height: 100%;
  width: 100%;
}

output .image span {
  position: absolute;
  top: -4px;
  right: 4px;
  cursor: pointer;
  font-size: 22px;
  color: white;
}

output .image span:hover {
  opacity: 0.8;
}

output .span--hidden {
  visibility: hidden;
}

